# Server

./: .env  .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
src/: error.rs  main.rs  routes.rs
src/config/: mod.rs
src/database/: schema.rs
src/database/migrations/2025-01-27-075004_create_users/: up.sql
src/features/: dashboard.rs  error.rs  mod.rs  session.rs
src/features/session/: mod.rs
src/middleware/: authenticate.rs  mod.rs  redirect_if_authenticated.rs
src/routes/: channels.rs  mod.rs  web.rs
src/state/: cache.rs  db_pool.rs  mod.rs
src/templates/dashboard/: show.html.jinja
src/templates/session/: create.jinja
