[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros", "http2"] }
axum-extra = { version = "0.10.0", features = ["typed-routing", "typed-header", "form"] }
diesel = { version = "2.2.6", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
http = "1.2.0"
moka = { version = "0.12.10", features = ["future"] }
rinja = "0.3.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
socketioxide = { version = "0.16.1", features = ["tracing", "state"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-cookies = { version = "0.11.0", features = ["private"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
